sandc/test/fixtures/astRegression/shouldSucceed/productions/statement/BreakStatement.sand
pub class BreakStatement {
    foo() {
        break;
    }
}