sandc/test/fixtures/astRegression/shouldFail/productions/classInstanceMethodDeclaration/ProtOpen.sand
pub class ProtOpen {
    prot open foo() {
        
    }
}